# kmtools

./: README.DEV.md  README.md  pyproject.toml
benchmarks/: run_benchmarks.py
docs/: commands.md  file-formats.md  getting-started.md  testing-and-benchmarking.md  use-alt-mode.md
featuredocs/: feature-cli-ux.md  feature-code-quality.md  feature-error-handling.md  feature-merge-improvements.md  feature-plot-implementation.md  feature-test-coverage.md  feature-use-alt.md
src/kmtools/: chunk.py  exceptions.py  filter.py  filter_types.py  kmtools.py  merge.py  plot.py  utils.py
tests/: alt_reference_1.tsv  conftest.py  km_output_1.txt  reference_1.tsv  test_chunk.py  test_cli.py  test_data_integration.py  test_filter.py  test_filter_comprehensive.py  test_filter_types.py  test_integration.py  test_merge.py  test_use_alt.py  test_utils.py
tests/data/: alt_reference.tsv  km_output_deletion.txt  km_output_mixed.txt  km_output_substitution.txt  reference_deletion.tsv  reference_mixed.tsv  reference_substitution.tsv
